--- a/medical_office_manager/office/templates/office/register_patient.html
+++ b/medical_office_manager/office/templates/office/register_patient.html
@@ -6,5 +6,20 @@
 </head>
 <body>
     <p>REGISTER PATIENT</p>
+    <!---->
+    <form action = '/office/list_patients/' method="POST">
+        {% csrf_token %}
+        
+        Name: <input type="text" name="name">
+        <br><br>
+        Data de nascimento: <input type="date" name="date_of_birth">
+        <br><br>        
+        CPF: <input type="text" name="CPF">
+        <br><br>        
+        Telefone: <input type="text" name="phone">
+        <br><br>
+      
+        <button>Send</button>
+    </form>
 </body>
 </html>
