--- a/medical_office_manager/office/templates/office/home_assistant.html
+++ b/medical_office_manager/office/templates/office/home_assistant.html
@@ -1,10 +1,8 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home assistant</title>
-</head>
-<body>
+{% extends "office/base_assistant.html" %}
+
+{% block content %}
+    
     <p>HOME ASSISTANT</p>
-</body>
-</html>
+
+{% endblock %}
+
