--- a/medical_office_manager/office/templates/office/home_doctor.html
+++ b/medical_office_manager/office/templates/office/home_doctor.html
@@ -1,10 +1,7 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Doctor</title>
-</head>
-<body>
+{% extends "office/base_doctor.html" %}
+
+{% block content %}
+    
     <p>HOME DOCTOR</p>
-</body>
-</html>
+
+{% endblock %}
