validação de formulário de registro de paciente

--- a/medical_office_manager/office/templates/office/base_doctor.html
+++ b/medical_office_manager/office/templates/office/base_doctor.html
@@ -9,6 +9,8 @@
         <a href="{% url 'office:list_patients_doctor' %}">Listar Pacientes</a>
         | 
         <a href="{%url 'logout'%}">Sair</a>
+        | &emsp;&emsp;
+        <span>Olá, {{user.username}}</span>
     </span>
 
     <br><br>
