--- a/medical_office_manager/templates/registration/login.html
+++ b/medical_office_manager/templates/registration/login.html
@@ -28,7 +28,10 @@
       
     <button type="submit">Entrar</button>
 
+    <button type="submit" onclick="window.location.href='/accounts/login/'; return false;" >Cancel</button>
+
     <input type="hidden" name='next' value= "{{next}}">
+    
 
 </form>
 
