--- a/medical_office_manager/office/templates/office/base_assistant.html
+++ b/medical_office_manager/office/templates/office/base_assistant.html
@@ -11,6 +11,8 @@
     <a href="{% url 'office:list_patients_assistant' %}">Listar Pacientes</a>
     | 
     <a href="{%url 'logout'%}">Sair</a>
+    | &emsp;&emsp;
+    <span>Olá, {{user.username}}</span>
     </span>
 
     <br><br>
