updating templates com título

--- a/medical_office_manager/office/templates/office/base_doctor.html
+++ b/medical_office_manager/office/templates/office/base_doctor.html
@@ -3,6 +3,7 @@
     <title>Medical Office</title>
 </head>
 <body>
+    <h1>MEDICAL OFFICE</h1>
     <span>
         <a href="{% url 'office:home_doctor' %}">Home</a> 
         | 
