--- a/medical_office_manager/templates/403.html
+++ b/medical_office_manager/templates/403.html
@@ -5,7 +5,7 @@
     <title>ERROR 403</title>
 </head>
 <body>
-
+    <h1>MEDICAL OFFICE</h1>
     <span>
         <a href="{% url 'office:home_router' %}">Home</a> 
         | 
