--- a/medical_office_manager/templates/registration/logged_out.html
+++ b/medical_office_manager/templates/registration/logged_out.html
@@ -5,6 +5,7 @@
     <title>Logout</title>
 </head>
 <body>
+    <h1>MEDICAL OFFICE</h1>
     <p>You have been logged out!</p>
     <a href="/accounts/login/">Click here to login</a>
 </body>
