--- a/medical_office_manager/templates/registration/login.html
+++ b/medical_office_manager/templates/registration/login.html
@@ -6,6 +6,8 @@
 
         FORM
 -->
+<h1>MEDICAL OFFICE</h1>
+
 {% if form.errors %}
     <p>Username or password incorrect. Try again.</p>
 {% endif %}
