--- a/medical_office_manager/office/templates/office/base_assistant.html
+++ b/medical_office_manager/office/templates/office/base_assistant.html
@@ -3,6 +3,7 @@
     <title>Medical Office</title>
 </head>
 <body>
+    <h1>MEDICAL OFFICE</h1>
     <span>
     <a href="{% url 'office:home_assistant' %}">Home</a> 
     | 
