adicionado estilo aos templates

--- a/medical_office_manager/office/templates/office/list_patients_assistant.html
+++ b/medical_office_manager/office/templates/office/list_patients_assistant.html
@@ -1,25 +1,48 @@
 {% extends "office/base_assistant.html" %}
 
 {% block content %}
+ 
+<style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+      }
+      
+      td, th {
+        border: 1px solid #ffe6d7;
+        text-align: left;
+        padding: 8px;
+      }
+      
+      tr:nth-child(even) {
+        background-color: #ffe6d7;
+      }
+      </style>
     
-<p>PATIENTS LIST (assistant version)</p>
-
-<div>
-    <table>
-        <tr>
-            <th>name</th>
-            <th>CPF</th>
-        </tr>
-        {% for patient in patients%}
-        <tr>
-            <td>{{patient.name}}</td>
-            <td>{{patient.CPF}}</td>
-        </tr>
-        {% endfor %}
-
-
-    </table>
-</div>
+    <br> 
+    
+    <div class="container-fluid text-center display:block">
+        <p>&emsp;&emsp;<strong>LISTA DE PACIENTES</strong></p>
+        <br>
+    
+        <div>
+            <table class="container-fluid text-center display:block">
+                <tr>
+                    <th>Nome</th>
+                    <th>CPF</th>
+                </tr>
+                {% for patient in patients%}
+                <tr>
+                    <td>{{patient.name}}</td>
+                    <td>{{patient.CPF}}</td>
+                </tr>
+                {% endfor %}
+    
+    
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
 
