--- a/medical_office_manager/office/templates/office/base_doctor.html
+++ b/medical_office_manager/office/templates/office/base_doctor.html
@@ -1,20 +1,44 @@
 <html>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <title>Medical Office</title>
 </head>
 <body>
-    <h1>MEDICAL OFFICE</h1>
-    <span>
-        <a href="{% url 'office:home_doctor' %}">Home</a> 
-        | 
-        <a href="{% url 'office:list_patients_doctor' %}">Listar Pacientes</a>
-        | 
-        <a href="{%url 'logout'%}">Sair</a>
-        | &emsp;&emsp;
-        <span>Olá, {{user.username}}</span>
-    </span>
+    <nav class="navbar-header py-3" style="background-color:#ff670f; ">
+        <div class="container-fluid text-center display:block">
+            <span class="navbar-brand mb-0 h1" style = "color: white">
+                <h1>MEDICAL OFFICE</h1>
+            </span>
+        </div>
+    </nav> 
 
-    <br><br>
+    <nav class="navbar navbar-expand-lg" style= "background-color:#ffe6d7 ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02" >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+              <li class="nav-item" >
+                <a class="nav-link active" aria-current="page" href="{% url 'office:home_doctor' %} " style = "color: grey"><b>Início</b></a>
+              </li>&emsp;&emsp;
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'office:list_patients_doctor' %}" style = "color: grey"><b>Listar Pacientes</b></a>
+              </li>
+            </ul>
+            <span class="navbar-text" style = "color: grey"><b>Olá, {{user.username}}</b>
+              
+            </span>&emsp;&emsp;&emsp;
+            <span class="navbar-text">
+                <a class="nav-link" href="{%url 'logout'%}" style = "color: grey"><b>Sair</b></a>
+            </span>
+          </div>
+        </div>
+      </nav>
+
             
     {% block content %}
     
