--- a/medical_office_manager/templates/404.html
+++ b/medical_office_manager/templates/404.html
@@ -2,20 +2,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERROR 404</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <title>Medical Office</title>
 </head>
 <body>
-    <h1>MEDICAL OFFICE</h1>
-    <span>
-        <a href="{% url 'office:home_router' %}">Home</a> 
-        | 
-        <a href="{%url 'logout'%}">Sair</a>
-    </span>
+    <nav class="navbar-header py-3" style="background-color:#ff670f; ">
+        <div class="container-fluid text-center display:block">
+            <span class="navbar-brand mb-0 h1" style = "color: white">
+                <h1>MEDICAL OFFICE</h1>
+            </span>
+        </div>
+    </nav> 
 
+    <nav class="navbar navbar-expand-lg" style= "background-color:#ffe6d7 ">
+        <div class="container-fluid style=">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02" >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+              <li class="nav-item" >
+                <a class="nav-link active" aria-current="page" href="{% url 'office:home_assistant' %} " style = "color: grey"><b>Início</b></a>
+              </li>
+            </ul>
+            <span class="navbar-text" style = "color: grey"><b>Olá, {{user.username}}</b>
+              
+            </span>&emsp;&emsp;&emsp;
+            <span class="navbar-text">
+                <a class="nav-link" href="{%url 'logout'%}" style = "color: grey"><b>Sair</b></a>
+            </span>
+          </div>
+        </div>
+      </nav>
+ 
+
+    <br><br>
     
-    <h1>ERROR 404</h1>
-
-    <p>The page you're looking for wasn't found.</p>
+    <p>&emsp;&emsp;<strong>ERRO 404</strong></p>
+    
+    <p>&emsp;&emsp;A página que você está procurando não existe!</p>
 
 </body>
 </html>
