--- a/medical_office_manager/templates/registration/logged_out.html
+++ b/medical_office_manager/templates/registration/logged_out.html
@@ -2,11 +2,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logout</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <title>Medical Office</title>
 </head>
 <body>
-    <h1>MEDICAL OFFICE</h1>
-    <p>You have been logged out!</p>
-    <a href="/accounts/login/">Click here to login</a>
+    <nav class="navbar-header py-3" style="background-color:#ff670f; ">
+        <div class="container-fluid text-center display:block">
+            <span class="navbar-brand mb-0 h1" style = "color: white">
+                <h1>MEDICAL OFFICE</h1>
+            </span>
+        </div>
+    </nav> 
+
+    <br><br>
+     
+    <div class="container-fluid text-center display:block">
+        <p><strong>Você foi desconectado!</strong></p>
+
+        <button onclick="window.location='{% url 'login'%}'" >Clique aqui para entrar</button>
+    </div>
+
 </body>
 </html>
