updating error pages

--- a/medical_office_manager/templates/403.html
+++ b/medical_office_manager/templates/403.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02" >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
               <li class="nav-item" >
-                <a class="nav-link active" aria-current="page" href="{% url 'office:home_assistant' %} " style = "color: grey"><b>Início</b></a>
+                <a class="nav-link active" aria-current="page" href="{% url 'office:home_router' %} " style = "color: grey"><b>Início</b></a>
               </li>
             </ul>
             <span class="navbar-text" style = "color: grey"><b>Olá, {{user.username}}</b>
