--- a/medical_office_manager/templates/registration/login.html
+++ b/medical_office_manager/templates/registration/login.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
+
     <title>Medical Office</title>
 </head>
 <body>
@@ -26,14 +26,21 @@
     </nav> 
 
     {% if form.errors %}
-        <p>Username or password incorrect. Try again.</p>
+        <div class="container-fluid text-center display:block">
+            <p>Username or password incorrect. Try again.</p>
+        </div>
     {% endif %}
 
     {% if next %}
         {% if user.is_authenticated %}
-            <p>You don't have permission for this page</p>
+            <div class="container-fluid text-center display:block">
+                <p>You don't have permission for this page</p>
+            </div>    
+        <p></p>
         {% else %}
-            <p>Please login to see this page</p>
+            <div class="container-fluid text-center display:block">
+                <p>Please login to see this page</p>
+            </div> 
         {% endif %}
     {% endif %}
 
