--- a/medical_office_manager/office/templates/office/list_patients_assistant.html
+++ b/medical_office_manager/office/templates/office/list_patients_assistant.html
@@ -34,7 +34,7 @@
                 </tr>
                 {% for patient in patients%}
                 <tr>
-                    <td>{{patient.name}}</td>
+                    <td><a href="{% url 'office:patient_details_assistant' patient_id=patient.id%}" >{{patient.name}}</a></td>
                     <td>{{patient.CPF}}</td>
                 </tr>
                 {% endfor %}
