--- a/medical_office_manager/office/templates/office/list_patients_assistant.html
+++ b/medical_office_manager/office/templates/office/list_patients_assistant.html
@@ -25,7 +25,7 @@
     <div class="container-fluid text-center display:block">
         <p><strong>LISTA DE PACIENTES</strong></p>
         <br>
-        <p>Selecione um paciente para ver seus detalhes e ou editar seus dados.</p>
+        <p>Clique em um paciente para ver e ou editar seus dados.</p>
         <br>
     
         <div>
