--- a/medical_office_manager/office/templates/office/register_patient.html
+++ b/medical_office_manager/office/templates/office/register_patient.html
@@ -43,9 +43,9 @@
         <br><br>
 
         &emsp;&emsp;
-        <button type="submit">Editar</button>
+        <button type="submit">Cadastrar</button>
         &emsp;&emsp;
-        <button type="submit" onclick="window.location='{% url 'office:list_patients_assistant'%}'; return false;" >Cancelar</button>
+        <button onclick="window.location='{% url 'office:list_patients_assistant'%}'; return false;" >Cancelar</button>
     </div>
 </form>
 
