--- a/medical_office_manager/office/templates/office/base_doctor.html
+++ b/medical_office_manager/office/templates/office/base_doctor.html
@@ -27,6 +27,9 @@
               </li>&emsp;&emsp;
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'office:list_patients_doctor' %}" style = "color: grey"><b>Listar Pacientes</b></a>
+              </li>&emsp;&emsp;
+              <li class="nav-item">
+                <a class="nav-link" href="#" style = "color: grey"><b>Consultas</b></a>
               </li>
             </ul>
             <span class="navbar-text" style = "color: grey"><b>Olá, {{user.username}}</b>
