--- a/medical_office_manager/office/templates/office/register_patient.html
+++ b/medical_office_manager/office/templates/office/register_patient.html
@@ -37,9 +37,9 @@
         <br><br>
         Data de nascimento: <input type="date" name="date_of_birth">
         <br><br>        
-        CPF: <input type="text" name="CPF">
+        CPF: <input type="text" name="CPF" placeholder="Digite apenas números">
         <br><br>        
-        Telefone: <input type="text" name="phone">
+        Telefone: <input type="text" name="phone" placeholder="Digite apenas números">
         <br><br>
 
         &emsp;&emsp;
