carregando lista de consultas para o assistente com uma data informada pelo usuário

--- a/medical_office_manager/office/templates/office/appointments_list_assistant.html
+++ b/medical_office_manager/office/templates/office/appointments_list_assistant.html
@@ -26,9 +26,12 @@
         <table>
             <tr>
                 <td style = "border: none; vertical-align: text-top">
+                    <form action = '{% url 'office:appointments_list_assistant'%}' method="POST">
+                        {% csrf_token %}
                     <input type="date" name="appointment_date">
                     <br><br>
-                    <input type="submit">
+                    <button type="submit">Buscar</button>
+                    </form>
                 </td>
 
 
