carregando lista de consultas para o medico com uma data informada pelo usuário

--- a/medical_office_manager/office/templates/office/appointments_list_doctor.html
+++ b/medical_office_manager/office/templates/office/appointments_list_doctor.html
@@ -1,4 +1,4 @@
-{% extends "office/base_doctor.html" %}
+{% extends "office/base_assistant.html" %}
 
 {% block content %}
 <style>
@@ -26,7 +26,7 @@
         <table>
             <tr>
                 <td style = "border: none; vertical-align: text-top">
-                    <form action = '{% url 'office:appointments_list_assistant'%}' method="POST">
+                    <form action = '{% url 'office:appointments_list_doctor'%}' method="POST">
                         {% csrf_token %}
                     <input type="date" name="appointment_date">
                     <br><br>
