--- a/medical_office_manager/office/templates/office/list_patients_doctor.html
+++ b/medical_office_manager/office/templates/office/list_patients_doctor.html
@@ -24,6 +24,15 @@ table {
 <div class="container-fluid text-center display:block">
     <p><strong>LISTA DE PACIENTES</strong></p>
     <br>
+
+    <form action='{% url 'office:list_patients_doctor'%}' method="GET">
+        
+        <input type="text" name = "patient_filtered" placeholder = "Digite nome ou CPF">
+        <input type="submit" value = "Buscar">
+
+    </form>
+
+    <br>
     <p>Clique em um paciente para ver seus dados.</p>
     <br>
 
