confirmação de agendamento de consultas

--- a/medical_office_manager/office/templates/office/appointment_successfully_scheduled.html
+++ b/medical_office_manager/office/templates/office/appointment_successfully_scheduled.html
@@ -13,6 +13,8 @@
     <p><strong>Hora: {{time}}</strong></p>
     <p><strong>Paciente: {{patient.name}} (CPF {{patient.CPF}})</strong></p>
     <br>
+
+    <button onclick="window.location='{% url 'office:appointments_list_assistant'%}'; return false;" >Voltar para visualização de consultas</button>
 </div>
 
 {% endblock %}
