--- a/medical_office_manager/office/templates/office/appointments_list_assistant.html
+++ b/medical_office_manager/office/templates/office/appointments_list_assistant.html
@@ -58,16 +58,17 @@
                                 
                                 <td>
                                     {%if appointment.1 == "DISPONÍVEL"%}
-
-                                        <button onclick="window.location='{% url 'office:schedule_appointment' date_time=date_default|add:' '|add:appointment.0 %}'; return false;" style="width:110px">Agendar</button>
+                                        
+                                            <button onclick="window.location='{% url 'office:schedule_appointment' date_time=date_default|add:' '|add:appointment.0 %}'; return false;" style="width:110px">Agendar</button>
+                                        
 
                                     {%else%}
-                                        <button type="submit" style="width:110px"   onclick= "">Desmarcar</button>
-
+                                        
+                                            <button onclick="window.location='{% url 'office:unschedule_appointment' appointment_id=appointment.2 %}'; return false;" style="width:110px">Desmarcar</button>
+                                        
+  
                                     {%endif%}
-                                    
                                 </td>
-                              
                             </tr>
                         {% endfor %}
                     </table>
