bloquear marcação de consulta para uma data/hora no passado

--- a/medical_office_manager/office/templates/office/schedule_appointment.html
+++ b/medical_office_manager/office/templates/office/schedule_appointment.html
@@ -8,6 +8,8 @@
     <br>
 </div>
 
+{%if is_future_date_time %}
+
 <div class="container-fluid text-center display:block">
     <p><strong>Data: {{date_display}}</strong></p>
     <p><strong>Hora: {{time}}</strong></p>
@@ -36,6 +38,18 @@
     </form>
 </div>
 
+{% else%}
+
+<div class="container-fluid text-center display:block">
+    <p><strong>Não é possível agendar uma consulta pra uma data e hora no passado!</strong></p>
+    <br>
+    <p><strong>Escolha uma data e hora no futuro!</strong></p>
+    <br>
+
+    <button onclick="window.location='{% url 'office:appointments_list_assistant'%}'; return false;" style="width:110px">Voltar</button>
+</div>
+
+{% endif %}
 
 
 {% endblock %}
