lista de consultas: voltando para data previamente selecionada

--- a/medical_office_manager/office/templates/office/appointment_successfully_scheduled.html
+++ b/medical_office_manager/office/templates/office/appointment_successfully_scheduled.html
@@ -14,7 +14,7 @@
     <p><strong>Paciente: {{patient.name}} (CPF {{patient.CPF}})</strong></p>
     <br>
 
-    <button onclick="window.location='{% url 'office:appointments_list_assistant'%}'; return false;" >Voltar para visualização de consultas</button>
+    <button onclick="window.location='{% url 'office:appointments_list_assistant' date=date_url%}'; return false;" >Voltar para visualização de consultas</button>
 </div>
 
 {% endblock %}
