--- a/medical_office_manager/office/templates/office/base_assistant.html
+++ b/medical_office_manager/office/templates/office/base_assistant.html
@@ -36,7 +36,8 @@
               </ul>
             </li>&emsp;&emsp;
             <li class="nav-item" >
-              <a class="nav-link active" aria-current="page" href="{% url 'office:appointments_list_assistant' %} " style = "color: grey"><b>Consultas</b></a>
+              {% now "Y-m-d" as current_date%}
+              <a class="nav-link active" aria-current="page" href="{% url 'office:appointments_list_assistant' date=current_date%} " style = "color: grey"><b>Consultas</b></a>
             </li>&emsp;&emsp;
           </ul>
           <span class="navbar-text" style = "color: grey"><b>Olá, {{user.username}}</b>
