--- a/medical_office_manager/office/templates/office/schedule_appointment.html
+++ b/medical_office_manager/office/templates/office/schedule_appointment.html
@@ -33,7 +33,7 @@
         
         &emsp;&emsp;
 
-        <button onclick="window.location='{% url 'office:appointments_list_assistant'%}'; return false;" style="width:110px">Voltar</button>
+        <button onclick="window.location='{% url 'office:appointments_list_assistant' date=date_url%}'; return false;" style="width:110px">Voltar</button>
         
     </form>
 </div>
@@ -46,7 +46,7 @@
     <p><strong>Escolha uma data e hora no futuro!</strong></p>
     <br>
 
-    <button onclick="window.location='{% url 'office:appointments_list_assistant'%}'; return false;" style="width:110px">Voltar</button>
+    <button onclick="window.location='{% url 'office:appointments_list_assistant' date=date_url%}'; return false;" style="width:110px">Voltar</button>
 </div>
 
 {% endif %}
