--- a/medical_office_manager/office/templates/office/unschedule_appointment_successfully.html
+++ b/medical_office_manager/office/templates/office/unschedule_appointment_successfully.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container-fluid text-center display:block">
-    <button onclick="window.location='{% url 'office:appointments_list_assistant'%}'; return false;" >Voltar para visualização de consultas</button>
+    <button onclick="window.location='{% url 'office:appointments_list_assistant' date=appointment.date%}'; return false;" >Voltar para visualização de consultas</button>
 </div>
 
 {% endblock %}
